# FanetGroundStation

./: .gitignore  CMakeLists.txt  README.md  config.xml  fagsd.service
eagle/: FANET_RPiZero.brd  FANET_RPiZero.sch
src/: CMakeLists.txt  application.cpp  application.h  config.h.in  fanetmessagedispatcher.cpp  fanetmessagedispatcher.h  main.cpp
src/config/: fagsconfig.cpp  fagsconfig.h  fanetconfig.cpp  fanetconfig.h  radioconfig.cpp  radioconfig.h  stationconfig.cpp  stationconfig.h
src/fanet/: abstractfanetmessage.h  enablecommand.cpp  enablecommand.h  fanetaddress.cpp  fanetaddress.h  fanetpayload.cpp  fanetpayload.h  fanetprotocolparser.cpp  fanetprotocolparser.h  fanetradio.cpp  fanetradio.h  genericreply.cpp  genericreply.h  receiveevent.cpp  receiveevent.h  regioncommand.cpp  regioncommand.h  transmitcommand.cpp  transmitcommand.h  transmitreply.cpp  transmitreply.h  versioncommand.cpp  versioncommand.h  versionreply.cpp  versionreply.h
src/gpio/: gpio.cpp  gpio.h
src/log/: logger.cpp  logger.h
src/qtsingleapplication/: CMakeLists.txt
src/qtsingleapplication/src/: qtlocalpeer.cpp  qtlockedfile_unix.cpp
src/weatherstation/: abstractweatherstation.cpp  abstractweatherstation.h  holfuyapi.cpp  holfuyapi.h  holfuywidget.cpp  holfuywidget.h  windbirdapi.cpp  windbirdapi.h
